# chest_cancer_detection

./: README.md  main.py  pyproject.toml  setup.py  template.py
src/ChestCancerDetection/: __init__.py
src/ChestCancerDetection/utils/: common.py
