[project]
name = "chest"
version = "0.1.0"
description = ""
authors = [
    {name = "nihal-das-cv",email = "nihaldasofficial@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "box (>=0.1.5,<0.2.0)",
    "ensure (>=1.0.4,<2.0.0)",
    "joblib (>=1.5.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
